--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-WNN693');</script>
   <!-- End Google Tag Manager -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{{ site.name }} | {{ page.title }}</title>
@@ -33,4 +34,53 @@
   {% else %}
     {% stylesheet dark %}
   {% endif %}
+
+  <script>
+    function main() {
+      console.log("As above, so bellow");
+      const endpoint = "https://8ohm943ypd.execute-api.us-east-1.amazonaws.com/dev/snitch";
+
+      var ref = getParameterByName("ref");
+      if (ref) {
+        mutateLinks("ref=" + ref + "&");
+      }
+
+      $.getJSON("https://httpbin.org/ip").done(function (data) {
+        var view = {};
+        view.origin = data.origin;
+        view.ref = getParameterByName("ref");
+        view.date = Date.now();
+        view.href = window.location.href;
+
+        $.post(endpoint, JSON.stringify(view));
+      });
+    }
+
+    function mutateLinks(query) {
+      document.querySelectorAll("a").forEach(function (e,i,a) {
+        if (e.href.indexOf("?") < 0) {
+          e.href += "?" + query;
+        }
+        else {
+          e.href += query;
+        }
+
+      });
+    }
+
+    function getParameterByName(name, url) {
+      if (!url) {
+        url = window.location.href;
+      }
+      name = name.replace(/[\[\]]/g, "\\$&");
+      var regex = new RegExp("[?&]" + name + "(=([^&#]*)|&|#|$)"),
+          results = regex.exec(url);
+      if (!results) return null;
+      if (!results[2]) return '';
+      return decodeURIComponent(results[2].replace(/\+/g, " "));
+    }
+
+    main();
+
+  </script>
 </head>
