Fix extra forwards slash

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -42,7 +42,7 @@
 
       var ref = getParameterByName("ref");
       if (ref) {
-        mutateLinks("ref=" + ref + "&");/
+        mutateLinks("ref=" + ref + "&");
       }
 
       $.getJSON("http://ip-api.com/json/?fields=9201").done(function (data) {
