--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
   'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
   })(window,document,'script','dataLayer','GTM-WNN693');</script>
   <!-- End Google Tag Manager -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>{{ site.name }} | {{ page.title }}</title>
@@ -35,5 +35,5 @@
     {% stylesheet dark %}
   {% endif %}
 
-  <script src="https://cdn.rawgit.com/bvincent1/snitcher/c5dc3078/snitch_tag.js" charset="utf-8"></script>
+  <script src="https://cdn.rawgit.com/bvincent1/snitcher/c5dc3078/snitch_tag.js" integrity="sha384-lnbviq+Cc8CLcs6GOr0xW+/Cwgjy/qW2EQwWWXRJM4inxXWz1wh+zVf3fsVNHIDU" crossorigin="anonymous" charset="utf-8"></script>
 </head>
